force-app/main/default/objects/Article__c/fields/Fabriquant__c.field-meta.xml
<CustomField>
    <fullName>Fabriquant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabriquant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fabriquant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Articles (Fabriquant)</relationshipLabel>
    <relationshipName>Articles1</relationshipName>
    <type>Lookup</type>
</CustomField>