force-app/main/default/objects/Article__c/fields/Prix_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Prix_d_achat__c</fullName>
    <label>Prix d&apos;achat</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>