force-app/main/default/objects/Article__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANALOG</fullName>
            </value>
            <value>
                <fullName>ABUTMENT</fullName>
            </value>
            <value>
                <fullName>ATTACHMENT</fullName>
            </value>
            <value>
                <fullName>PLASTIC PIN</fullName>
            </value>
            <value>
                <fullName>DIGITAL ANALOG</fullName>
            </value>
            <value>
                <fullName>SCAN BODY</fullName>
            </value>
            <value>
                <fullName>SCAN POST</fullName>
            </value>
            <value>
                <fullName>PRE-MILLED</fullName>
            </value>
            <value>
                <fullName>TECHNICAL SCREW</fullName>
            </value>
            <value>
                <fullName>METAL DRILL</fullName>
            </value>
            <value>
                <fullName>MATERIEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>