force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fabriquant__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>MATERIEL</value>
    </filters>
    <label>All</label>
</ListView>